--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                             <a class="badge text-white">Employee API</a>
                             <a class="badge text-white">Form</a>
                         </div>
-                        <div class="row d-flex justify-content-between mx-auto bp-md cntrl-2">
+                        <nav class="row d-flex justify-content-between mx-auto bp-md cntrl-2">
                             <a class="badge text-white">Game App</a>
                             <a class="badge text-white">Photo Gallery</a>
                             <a class="badge text-white">Web App</a>
                             <p class="text-center description" style="display: none;">Eric's Bio page is a look into his personality and ambitions. It was written with HTML and CSS. Using transition effects to bring a simple yet fun experience to interested viewers.</p>
                             <p class="text-center description" style="display: none;">A sample employee directory page that utilizes fetch, API and Javascript to generate a random set of employees. The Javascript pulls and parses the fetched data to JSON, then extracts the specific information required to build sample profiles. In addition, the page also features a modal window that can cycle through the available profiles utilizing Javascript to generate additional profile information from the API data.</p>
-                            <p class="text-center  description" style="display: none;">A sample form page that inspects user input and displays errors the user may need to correct before allowing the form to be submitted. It contains drop-down elements, postal code formatting, sample checkboxes and radial selector elements that all funtion as a user should expect.</p>
+                            <p class="text-center  description" style="display: none;">A sample form page that inspects user input and displays errors the user may need to correct before allowing the form to be submitted. It contains drop-down elements, postal code formatting, sample checkboxes and radial selector elements that all function as a user would expect.</p>
                             <p class="text-center description" style="display: none;">This app is a generic version of 'hangman', a popular phrase guessing game. The user makes guesses with an on-screen keyboard and through Javascript programming their guesses are recorded and they are given feedback for either correct or incorrect guesses. The app runs on a loop that allows it to be reset after winning or losing without the need to refresh the browser.</p>
                             <p class="text-center description" style="display: none;">A sample photo-gallery page with a built in modal widow for displaying larger images. The modal viewport allows the user to cycle through the images with Javascript event listeners. Additionally the page contains a search bar that dynamically filters the gallery based on user input. </p>
                             <p class="text-center description" style="display: none;">A sample social media page that features Javascript simulated responses to user input. Contains a graph that dynamically responds and changes when a user specifies the timeframe they wish to view, as well as notifications, a working user search field, a responsive messaging field, and settings panal that utilizes local storage to save settings even after a user leaves or refreshes the page.</p>
-                        </div>
+                        </nav>
                     </div>
                 </div>
             </div>
