--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <div class="row bp-list">
                     <div class="container cube-control mb-4 bp-md">
                         <div class="row d-flex justify-content-between mx-auto mb-3 bp-md cntrl-1">
-                            <a class="badge text-white">Bio Page</a>
-                            <a class="badge text-white">Employee API</a>
-                            <a class="badge text-white">Form</a>
+                            <a class="badge text-white" tabindex="0">Bio Page</a>
+                            <a class="badge text-white" tabindex="0">Employee API</a>
+                            <a class="badge text-white" tabindex="0">Form</a>
                         </div>
                         <nav class="row d-flex justify-content-between mx-auto bp-md cntrl-2">
-                            <a class="badge text-white">Game App</a>
-                            <a class="badge text-white">Photo Gallery</a>
-                            <a class="badge text-white">Web App</a>
+                            <a class="badge text-white" tabindex="0">Game App</a>
+                            <a class="badge text-white" tabindex="0">Photo Gallery</a>
+                            <a class="badge text-white" tabindex="0">Web App</a>
                             <p class="text-center description" style="display: none;">Eric's Bio page is a look into his personality and ambitions. It was written with HTML and CSS. Using transition effects to bring a simple yet fun experience to interested viewers.</p>
                             <p class="text-center description" style="display: none;">A sample employee directory page that utilizes fetch, API and Javascript to generate a random set of employees. The Javascript pulls and parses the fetched data to JSON, then extracts the specific information required to build sample profiles. In addition, the page also features a modal window that can cycle through the available profiles utilizing Javascript to generate additional profile information from the API data.</p>
                             <p class="text-center  description" style="display: none;">A sample form page that inspects user input and displays errors the user may need to correct before allowing the form to be submitted. It contains drop-down elements, postal code formatting, sample checkboxes and radial selector elements that all function as a user would expect.</p>
@@ -56,7 +56,7 @@
                     <div class="footer-grid d-flex mb-4">
                         <h5 class="footer-heading">Contact</h5>
                         <div class="container d-flex justify-content-end bp-social">
-                            <a href="https://www.linkedin.com/in/eric-perozich-458873215/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Linked-In">
+                            <a class="bp-linkedin" href="https://www.linkedin.com/in/eric-perozich-458873215/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Linked-In">
                                 <svg class="linkedin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <path class="linkedin-path" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                                 </svg>
@@ -64,6 +64,13 @@
                             <a class="bp-github" href="https://github.com/flutterkat" target="_blank" data-bs-toggle="tooltip" data-bs-placement="bottom" title="GitHub">
                                 <svg class="github" xmlns="http://www.w3.org/2000/svg" viewBox="0 0.5 24 24">
                                     <path class="github-path" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                </svg>
+                            </a>
+                            <a class="bp-github" href="https://teamtreehouse.com/ericperozich" target="_blank" data-bs-toggle="tooltip" data-bs-placement="bottom" title="GitHub">
+                                <svg class="treehouse" viewBox="0 0 256 274" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
+                                    <g>
+                                        <path d="M242.346667,60.3733333 C238.933333,58.6666667 231.253333,55.2533333 222.72,50.1333333 C213.333333,45.0133333 198.826667,53.5466667 189.44,68.0533333 L173.226667,95.36 C167.253333,107.306667 168.106667,120.106667 175.786667,131.2 L176.64,132.053333 C184.32,143.146667 194.56,152.533333 197.12,155.946667 C198.826667,157.653333 200.533333,161.066667 201.386667,163.626667 C203.946667,173.866667 198.826667,183.253333 188.586667,185.813333 C179.2,188.373333 168.96,182.4 165.546667,173.013333 C164.693333,170.453333 164.693333,167.893333 164.693333,165.333333 C165.546667,161.066667 163.84,154.24 157.866667,149.12 C151.893333,142.293333 139.946667,155.093333 136.533333,167.04 L136.533333,167.893333 C133.12,180.693333 130.56,190.933333 131.413333,191.786667 C131.413333,192.64 132.266667,193.493333 132.266667,193.493333 C137.386667,203.733333 133.973333,215.68 123.733333,220.8 C113.493333,225.92 100.693333,222.506667 95.5733333,212.266667 C90.4533333,202.026667 93.8666667,190.08 104.106667,184.96 C104.96,184.96 104.96,184.106667 105.813333,184.106667 C106.666667,184.106667 108.373333,178.133333 110.933333,172.16 C112.64,166.186667 114.346667,161.066667 114.346667,161.066667 C114.346667,160.213333 114.346667,159.36 115.2,159.36 L125.44,123.52 L115.2,144.853333 C113.493333,140.586667 111.786667,140.586667 106.666667,144 C104.106667,145.706667 98.9866667,149.973333 97.28,151.68 C93.0133333,155.093333 89.6,161.066667 87.8933333,164.48 C87.04,167.04 85.3333333,168.746667 83.6266667,170.453333 C75.9466667,177.28 64,175.573333 58.0266667,167.893333 C52.0533333,160.213333 53.76,149.973333 61.44,144 C64,142.293333 66.56,140.586667 69.12,140.586667 C73.3866667,139.733333 89.6,129.493333 98.9866667,123.52 C100.693333,122.666667 102.4,120.96 103.253333,120.106667 L128,102.186667 L105.813333,114.133333 L100.693333,114.133333 C93.8666667,114.986667 85.3333333,115.84 83.6266667,118.4 C82.7733333,119.253333 81.92,120.96 80.2133333,121.813333 C73.3866667,125.226667 63.1466667,123.52 57.1733333,116.693333 C52.0533333,109.013333 53.76,99.6266667 60.5866667,94.5066667 C64.8533333,91.9466667 68.2666667,91.0933333 71.68,91.0933333 C77.6533333,91.0933333 93.0133333,94.5066667 105.813333,91.9466667 L109.226667,91.0933333 C122.026667,88.5333333 137.386667,78.2933333 143.36,66.3466667 C143.36,66.3466667 149.333333,55.2533333 157.013333,43.3066667 C164.693333,30.5066667 163.84,16.8533333 156.16,11.7333333 L141.653333,3.2 C133.973333,-1.06666667 122.026667,-1.06666667 114.346667,3.2 L13.6533333,58.6666667 C5.97333333,62.9333333 0,74.0266667 0,82.56 L0,191.786667 C0,200.32 5.97333333,209.706667 13.6533333,213.973333 L115.2,270.293333 C122.88,274.56 134.826667,274.56 142.506667,270.293333 L242.346667,213.12 C250.026667,208.853333 256,199.466667 256,190.933333 L256,82.56 C256,74.0266667 250.026667,64.64 242.346667,60.3733333 L242.346667,60.3733333 Z" fill="#5FCF80"></path>
+                                    </g>
                                 </svg>
                             </a>
                         </div>
