minor fixes to certs

--- a/index.html
+++ b/index.html
@@ -190,13 +190,17 @@
             <footer>
                 <p class="center-text">click images to verify authenticity</p>
                 <div class="flex">
-                    <a href="https://www.credential.net/0c742771-a6b4-407c-9665-5cd174e58abc#gs.om2wyf" target="_blank"><img class="cert" style="border: 1px solid black" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/37856374" alt="Treehouse Techdegree Certificate"></a>
-                    <a href="https://www.credly.com/badges/90f07e01-feb4-4034-b2d5-ef35ceeb2d62/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/ibm-z-os-mainframe-practitioner.png" alt="IBM z/OS Mainframe Practitioner Certificate"></a>
-                    <a href="https://www.credly.com/badges/5a20108a-9c51-47c1-a628-4e4edd67e38f/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/ibm-z-xplore-concepts.png" alt="IBM Zxplore concepts badge"></a>
-                    <a href="https://www.credly.com/badges/0c839bde-d6ee-4ac3-ac06-91fb0fa5a525/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/ibm-z-xplore-advanced.png" alt="IBM Zxplore advanced badge"></a>
-                    <a href="https://www.credly.com/badges/64160854-1b5d-4df0-8696-20eb322e145b/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/introduction-to-ibm-z-os.png" alt="Introduction to IBM z/OS badge"></a>
-                    <a href="https://www.credly.com/badges/33f7c509-dcd2-4202-871c-622969aa8723/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/introduction-to-z-os-commands-and-panels-on-ibm-z.png" alt="Introduction to IBM z/OS commands and panels badge"></a>
-                    <a href="https://www.credly.com/badges/b8cd9e15-2407-4f80-b974-c9f4d4910b02/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/introduction-to-system-programming-on-ibm-z.png" alt="IBM Z Introduction to System Programming"></a>
+                    <div class="cert-wrap">
+                        <a class="fewd-cert cert" href="https://www.credential.net/0c742771-a6b4-407c-9665-5cd174e58abc#gs.om2wyf" target="_blank"><img class="cert" style="border: 1px solid black" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/37856374" alt="Treehouse Techdegree Certificate"></a>
+                        <a class="cert" href="https://www.credly.com/badges/90f07e01-feb4-4034-b2d5-ef35ceeb2d62/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/ibm-z-os-mainframe-practitioner.png" alt="IBM z/OS Mainframe Practitioner Certificate"></a>
+                        <a class="cert" href="https://www.credly.com/badges/5a20108a-9c51-47c1-a628-4e4edd67e38f/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/ibm-z-xplore-concepts.png" alt="IBM Zxplore concepts badge"></a>
+                    </div>
+                    <div class="cert-wrap">
+                        <a class="cert" href="https://www.credly.com/badges/0c839bde-d6ee-4ac3-ac06-91fb0fa5a525/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/ibm-z-xplore-advanced.png" alt="IBM Zxplore advanced badge"></a>
+                        <a class="cert" href="https://www.credly.com/badges/64160854-1b5d-4df0-8696-20eb322e145b/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/introduction-to-ibm-z-os.png" alt="Introduction to IBM z/OS badge"></a>
+                        <a class="cert" href="https://www.credly.com/badges/33f7c509-dcd2-4202-871c-622969aa8723/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/introduction-to-z-os-commands-and-panels-on-ibm-z.png" alt="Introduction to IBM z/OS commands and panels badge"></a>
+                        <a class="cert" href="https://www.credly.com/badges/b8cd9e15-2407-4f80-b974-c9f4d4910b02/public_url" target="_blank"><img class="cert" style="border: 1px solid black" src="images/introduction-to-system-programming-on-ibm-z.png" alt="IBM Z Introduction to System Programming"></a>
+                    </div>
                 </div>
                 <a class="resume-download footer-links" href="docs/Resume.pdf" download target="_blank">Download Resume PDF</a>
                 <a href="https://github.com/flutterkat footer-links" class="social github footer-links" target="_blank">Github</a>
