--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="contact">
                     <h2>Contact Information</h2>
                     <div>
-                        <p><strong>Cell</strong>: 412-770-7769</p>
+                        <p><strong>Cell</strong>: (724)-978-3324</p>
                         <p><strong>Email</strong>: Eric.paro@protonmail.com</p>
                         <p><strong>Homepage</strong>: https://ericparo.github.io/Portfolio</p>
                     </div>
