--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div>
                         <p><strong>Cell</strong>: (724)-978-3324</p>
                         <p><strong>Email</strong>: Eric.paro@protonmail.com</p>
-                        <p><strong>Homepage</strong>: https://ericparo.github.io/Portfolio</p>
+                        <p><strong>Homepage</strong>: https://ericparo.github.io/resume</p>
                     </div>
                 </div>
 
