--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                             <h4 class="center-text"><strong>Basic Knowledge:</strong></h5>
                             <li class="center-text">IBM z/OS</li>
                             <li class="center-text">JCL</li>
+                            <li class="center-text">COBOL</li>
                             <li class="center-text">Ruby</li>
                             <li class="center-text">Ruby on Rails</li>
                             <li class="center-text">SQL</li>
